--- a/App/View/basic/basic.slide.html
+++ b/App/View/basic/basic.slide.html
@@ -29,7 +29,8 @@
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
     请输入该广告链接，未输入链接则该图片不可点击。
     </div>
-
+    <label>ALT描述：</label>
+    <input type="input" class="form-control" name="alt" value="<?=$info['alt']?>">
     <div style="bottom:15px;position: fixed;">
         <button type="button" id="myButton" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;确定&nbsp;&nbsp;&nbsp;&nbsp;</button>
         <button type="button" onclick="closeAll();" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;取消&nbsp;&nbsp;&nbsp;&nbsp;</button>
