--- a/App/View/case/case.edit.html
+++ b/App/View/case/case.edit.html
@@ -85,6 +85,10 @@
                         </div>
                         </p>
                     </li>
+                    <li>
+                        <label>ALT描述：</label>
+                        <textarea name="alt1" cols="40" rows="2"><?=$case['alt1']?></textarea>
+                    </li>
                     <li><br>
                         <hr>
                         <br></li>
@@ -97,6 +101,10 @@
                             <input type="file" id="case_pic2" name="fileName" style="display: inline-block;"/>
                         </div>
                         </p>
+                    </li>
+                    <li>
+                        <label>ALT描述：</label>
+                        <textarea name="alt2" cols="40" rows="2"><?=$case['alt2']?></textarea>
                     </li>
                     <li><br>
                         <hr>
