--- a/App/View/channel/channel.ad.html
+++ b/App/View/channel/channel.ad.html
@@ -29,6 +29,7 @@
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
     请输入该广告链接，未输入链接则该图片不可点击。
     </div>
+    <label>ALT描述:</label> <input type="text" name="alt" value="<?=$info['alt']?>"><br/>
     <label>描述：</label>
     <textarea class="form-control" name="desc" maxlength="150" style="width:99%;height:80px;"><?=$info['desc']?></textarea>
 
