--- a/App/View/industry/industry.induspic.html
+++ b/App/View/industry/industry.induspic.html
@@ -17,6 +17,8 @@
             <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
                 <br/><p>注：图片建议尺寸为 ( 20 ) x ( 20 )，文件最大不超过50kb</p>
             </div>
+            <label>ALT描述：</label><input type="text" id="alt" name="alt" value="<?=$pinfo['alt']?>"/>
+            <br/>
             <label>图片链接：</label><input type="text" id="link" name="link" value="<?=$pinfo['link']?>"/>
             <br/><p>请输入该广告链接，未输入链接则该图片不可点击。</p>
             </br>
