--- a/App/View/module/module.pic.html
+++ b/App/View/module/module.pic.html
@@ -23,6 +23,12 @@
 				</p>
 			</label>
 		</li>
+        <li>
+            <label>
+                <p><span>ALT描述</span></p>
+                <p><input type="text" name="alt" id="alt" maxlength="100" value="<?=$pic['alt']?>" /></p>
+            </label>
+        </li>
 		<li>
 			<label>
 				<p><span>图片链接</span></p>
