--- a/App/View/basic/basic.banner.html
+++ b/App/View/basic/basic.banner.html
@@ -29,6 +29,8 @@
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
     请输入该广告链接，未输入链接则该图片不可点击。
     </div>
+    <label>ALT描述：</label>
+    <input type="input" class="form-control" name="alt" value="<?=$info['alt']?>"><br/>
     <label>内嵌模块：</label>
     <select name="model">
         <option value="2" <? if($info['other']==2){echo 'selected';}?> >无</option>
