--- a/App/View/basic/basic.class.html
+++ b/App/View/basic/basic.class.html
@@ -24,6 +24,8 @@
     <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
     广告图片建议尺寸为 ( xxx ) x ( xxx )，文件最大不超过500kb，当前支持jpg,bmp,png格式文件
     </div>
+    <label>ALT描述：</label>
+    <input type="input" class="form-control" name="alt" value="<?=$info['alt']?>"  style="margin-bottom:5px;">
     <label>分类名称：</label>
     <input type="input" class="form-control" name="name" value="<?=$info['link']?>"  style="margin-bottom:5px;">
     <label>包含的分类：</label>
