--- a/App/View/module/module.edit.html
+++ b/App/View/module/module.edit.html
@@ -90,12 +90,14 @@
 				<tbody>
 				<tr>
 					<td>广告图名称</td>
+					<td>ALT描述</td>
 					<td>链接</td>
 					<td>操作</td>
 				</tr>
 				<?foreach ($moduleAds['rows'] as $ky => $vl) { ?>
 				<tr>
 					<td><img src="<?=$vl['pic']?>" width="100px" height="50px" /></td>
+					<td><?=empty($vl['alt'])?'无':$vl['alt']?></td>
 					<td>
 						<a target="_blank" href="http://<?=$vl['link']?>" title="<?=$vl['link']?>"><?php
 							if(strlen($vl['link'])>20){
