git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9167 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.index.html
+++ b/App/View/internal/internal.index.html
@@ -143,7 +143,7 @@
                 </div>
                 <? } ?>
             </dd>
-            <dd>
+            <dd style="height: 35px;">
                 <a href="javascript:void(0);" style="margin: 10px;float: left;" class="mj-sBtn" id="mj-sBtn">搜索</a>
                 <a href="javascript:void(0);" style="margin: 10px;float: left; <? if($s['jname']!=1){?>display: none;<? } ?>" class="mj-sBtn" id="jq_search">精确搜索</a>
             </dd>
@@ -363,10 +363,12 @@
             })
             strClass = strClass ? strClass.substr(1) : '';
             $('#'+id).val(strClass);
-            if(strClass){
-                $("#jq_search").show();
-            }else{
-                $("#jq_search").hide();
+            if(id=="tmClass"){
+                if(strClass){
+                    $("#jq_search").show();
+                }else{
+                    $("#jq_search").hide();
+                }
             }
         });
         $(".table tr td.showMore").hover(function(){
