商标美化图添加alt描述.  前台未完成
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9179 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -269,10 +269,18 @@
                     <div class="bzform">
                         <label>美化图片：</label><img src="<?=$sale['tminfo']['embellish']?>" class="bzpic" style="width:30px;height:30px;">
                         <input type="file" id="bzfile" name="fileName" style="display: inline-block;"/>
-                    </div> &nbsp;&nbsp;&nbsp;&nbsp;
+                    </div> &nbsp;&nbsp;&nbsp;&nbsp;<br/>
+                    <div class="">
+                        <label>ALT描述1：</label>
+                        <input type="text" size="40" name="alt1" value="<?=$sale['tminfo']['alt1']?>"/>
+                    </div><br/>
                     <div class="tjform">
                         <label>特价图片：</label><img src="<?=$sale['tminfo']['indexPic']?>" class="tjpic" style="width:30px;height:30px;">
                         <input type="file" id="tjfile" name="fileName" style="display: inline-block;"/>
+                    </div><br/>
+                    <div class="">
+                        <label>ALT描述2：</label>
+                        <input type="text" size="40" name="alt2" value="<?=$sale['tminfo']['alt2']?>"/>
                     </div>
                 </dd>
                 <dd><label>商标介绍：</label>
