--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -72,7 +72,7 @@
         <table>
             <thead>
             <tr>
-                <td colspan="10">出售信息</td>
+                <td colspan="11">出售信息</td>
             </tr>
             </thead>
             <tbody>
@@ -81,6 +81,7 @@
                 <td>出售时间</td>
                 <td>是否审核</td>
                 <td>来源渠道</td>
+                <td>用户ID</td>
                 <td>联系人</td>
                 <td>联系电话</td>
                 <td>底价(元)</td>
@@ -94,6 +95,7 @@
                 <td><?if ($vl['date']<=0){echo '---';}else{echo date('Y-m-d', $vl['date']);}?></td>
                 <td><?if($vl['isVerify']==1){?><em class="blue">已审核<?}else{?><em class="red">未审核<?}?></em></td>
                 <td><?=$saleSource[$vl['source']]?></td>
+				<td><?=$vl['uid']?></td>
                 <td><?=$vl['name']?></td>
                 <td><?=$vl['phone']?></td>
                 <td><?=$vl['price']<=0?'议价':$vl['price']?></td>
