--- a/App/View/seo/seo.index.html
+++ b/App/View/seo/seo.index.html
@@ -38,7 +38,7 @@
                         <?=$v['index']?>
                     </td>
                     <td>
-                        <?=$v['title']?>
+                        <?=mbSub($v['title'],0,30)?>
                     </td>
                     <td>
                         <?=$v['label']?>
