修改SEO设置第二版
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9208 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.edit.html
+++ b/App/View/internal/internal.edit.html
@@ -296,6 +296,8 @@
                     <? } ?>
                     </select>
                 </dd>
+                <input type="hidden" name="tid" id="tid" value="<?=$sale['tid']?>">
+                <dd><? require(ViewDir.'/seo/seo.set.html');?></dd>
     </form>
             </dl>
         </div>
