--- a/App/View/case/case.edit.html
+++ b/App/View/case/case.edit.html
@@ -106,6 +106,10 @@
                         <label>ALT描述：</label>
                         <textarea name="alt2" cols="40" rows="2"><?=$case['alt2']?></textarea>
                     </li>
+                    <li>
+                       <? require(ViewDir.'/seo/seo.set.html');?>
+                    </li>
+                    
                     <li><br>
                         <hr>
                         <br></li>
@@ -119,7 +123,9 @@
             </div>
         </div>
     </div>
-
+<style>
+    .mj-table label{width:60px}
+</style>
     <script type="text/javascript">
         $(function () {
             //确认编辑
