--- a/App/View/seo/seo.index.html
+++ b/App/View/seo/seo.index.html
@@ -21,7 +21,7 @@
                 <thead>
                 <tr class="active">
                     <th>ID</th>
-                    <th>页面URl</th>
+                    <th>页面名称</th>
                     <th>SEO标题</th>
                     <th>标签</th>
                     <th>是否启用</th>
@@ -35,7 +35,7 @@
                         <?=$v['id']?>
                     </td>
                     <td>
-                        <?=$v['index']?>
+                        <?=$seo_list[$v['type']]['name']?>
                     </td>
                     <td>
                         <?=mbSub($v['title'],0,30)?>
