SEO列表显示详情页ID
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9218 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/seo/seo.index.html
+++ b/App/View/seo/seo.index.html
@@ -35,7 +35,8 @@
                         <?=$v['id']?>
                     </td>
                     <td>
-                        <?=$seo_list[$v['type']]['name']?>
+                        <?=$seo_list[$v['type']]['name'];?>
+                        <?=$v['vid']?"-".$v['vid']:"";?>
                     </td>
                     <td>
                         <?=mbSub($v['title'],0,30)?>
